<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.spacemodal.bossrush.LoginActivity"
    tools:showIn="@layout/activity_login">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="vertical">
        <!--Title-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/boss_title"
                    android:fontFamily="@font/scream"
                    android:textSize="70sp"
                    android:textColor="@color/colorBlack"
                    android:textAlignment="center"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rush_title"
                    android:textAlignment="center"
                    android:textSize="70sp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/scream"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <!--Login User -->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/login_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/game_play"
                android:textSize="15sp"
                android:hint="@string/username"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <!--Login Password -->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:fontFamily="@font/game_play"
                android:textSize="15sp"
                android:hint="@string/password"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <!--Login Button-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="@string/login"
                android:textSize="17sp"
                android:fontFamily="@font/scream"/>
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>



</android.support.v7.widget.LinearLayoutCompat>
